# hyperquiz

./: build.py  build_rust.ps1  pubspec.yaml
.github/workflows/: build.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
lib/: app.dart  main.dart
lib/models/: question.dart  quiz_record.dart
lib/native/: native.dart
lib/providers/: app_provider.dart
lib/screens/: home_screen.dart  import_export_screen.dart  practice_screen.dart  question_bank_screen.dart  question_edit_screen.dart  settings_screen.dart  stats_screen.dart
lib/utils/: txt_parser.dart
lib/widgets/: animations.dart  hyperos_theme.dart  question_card.dart  stat_card.dart  stat_chart.dart
rust/: Cargo.toml
rust/src/: api.rs  database.rs  lib.rs  models.rs  quiz.rs
